Modifying index file

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
         <div class="cover bg-light">
           <div class="container px-3">
             <div class="row">
-              <div class="col-lg-6 p-2"><img class="img-fluid" src="images/illustrations/hello3.svg" alt="hello" />
+              <div class="col-lg-6 p-2"><img class="img-fluid" src="images/illustrations/hello new.svg" alt="hello" />
               </div>
               <div class="col-lg-6">
                 <div class="mt-5">
                   <p class="lead text-uppercase mb-1">Hello!</p>
-                  <h1 class="intro-title marker" data-aos="fade-left" data-aos-delay="50">I’m Kushagra Agarwal</h1>
+                  <h1 class="intro-title marker" data-aos="fade-up" data-aos-delay="50">I’m Kushagra Agarwal</h1>
                   <p class="lead fw-normal mt-3" data-aos="fade-up" data-aos-delay="100">Programmer,    Web Developer & Learner</p>
                   <div class="social-nav" data-aos="fade-up" data-aos-delay="200">
                     <nav role="navigation">
@@ -404,19 +404,19 @@
             <div class="social-nav">
               <nav role="navigation">
                 <ul class="nav justify-content-center">
-                  <li class="nav-item"><a class="nav-link" href="#"
+                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/kushagra-agarwal-319245219/"
                     title="LinkedIn"><i class="fab fa-linkedin"></i><span
                       class="menu-title sr-only">LinkedIn</span></a></li>
-                  <li class="nav-item"><a class="nav-link" href="#"
+                  <li class="nav-item"><a class="nav-link" href="https://github.com/agkush"
                     title="GitHub"><i class="fab fa-github"></i><span
                       class="menu-title sr-only">GitHub</span></a></li>
-                  <li class="nav-item"><a class="nav-link" href="#"
+                  <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/kush_ag01/"
                     title="Instagram"><i class="fab fa-instagram"></i><span
                       class="menu-title sr-only">Instagram</span></a></li>
-                  <li class="nav-item"><a class="nav-link" href="#"
+                  <li class="nav-item"><a class="nav-link" href="mailto:agkush2001@gmail.com"
                     title="Gmail"><i class="fab fa-google"></i><span
                       class="menu-title sr-only">Gmail</span></a></li>
-                  <li class="nav-item"><a class="nav-link" href="#"
+                  <li class="nav-item"><a class="nav-link" href="https://twitter.com/Kushagr06095596"
                     title="Twitter"><i class="fab fa-twitter"></i><span
                       class="menu-title sr-only">Twitter</span></a></li>
                 </ul>
