some changes in index files

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="cover bg-light">
           <div class="container px-3">
             <div class="row">
-              <div class="col-lg-6 p-2"><img class="img-fluid" src="images/illustrations/hello new.svg" alt="hello" />
+              <div class="col-lg-6 p-2"><img class="img-fluid" src="assets/illustrations/hello new.svg" alt="hello" />
               </div>
               <div class="col-lg-6">
                 <div class="mt-5">
@@ -128,7 +128,7 @@
               </div>
             </div>
             <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img
-                class="avatar img-fluid mt-2" src="images/illustrations/profilepic.PNG" width="400" height="400" alt="Walter Patterson" />
+                class="avatar img-fluid mt-2" src="assets/illustrations/profilepic.PNG" width="400" height="400" alt="Walter Patterson" />
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@
               </ul>
             </div>
             <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img
-                class="avatar img-fluid mt-2" src="images/illustrations/education.svg" width="300" height="300" alt="Walter Patterson" />
+                class="avatar img-fluid mt-2" src="assets/illustrations/education.svg" width="300" height="300" alt="Walter Patterson" />
             </div>
           </div>
         </div>
@@ -178,19 +178,19 @@
           </div>
           <div class="row py-3">
             <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="100"><img class="mb-2"
-                src="images/illustrations/programming.svg" width="120" height="120" alt="web design" />
+                src="assets/illustrations/programming.svg" width="120" height="120" alt="web design" />
               <div class="h5">Programming (JAVA)</div>
             </div>
             <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="200"><img class="mb-2"
-                src="images/illustrations/webdev.svg" width="120" height="120" alt="graphic design" />
+                src="assets/illustrations/webdev.svg" width="120" height="120" alt="graphic design" />
               <div class="h5">Web Design</div>
             </div>
             <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="300"><img class="mb-2"
-                src="images/illustrations/blogging.svg" width="120" height="120" alt="ui-ux" />
+                src="assets/illustrations/blogging.svg" width="120" height="120" alt="ui-ux" />
               <div class="h5">Blogging</div>
             </div>
             <div class="col-md-3 text-center" data-aos="fade-up" data-aos-delay="400"><img class="mb-2"
-                src="images/illustrations/music.svg" width="120" height="120" alt="app development" />
+                src="assets/illustrations/music.svg" width="120" height="120" alt="app development" />
               <div class="h5">Music & Guitar</div>
             </div>
           </div>
@@ -291,7 +291,7 @@
                     <div>
                       <h3 class="h5 mb-1">TalkiAI</h3>
                       <div class="text-muted text-small">Python Project</div>
-                    </div><img src="images/services/ui-ux.svg" width="48" height="48" alt="ui-ux" />
+                    </div><img src="assets/services/ui-ux.svg" width="48" height="48" alt="ui-ux" />
                   </div>
                 </div>
                 <div class="card-body px-3 py-2">
@@ -308,7 +308,7 @@
                     <div>
                       <h3 class="h5 mb-1">Attendify</h3>
                       <div class="text-muted text-small">Full Stack Development</div>
-                    </div><img src="images/services/app-development.svg" width="48" height="48" alt="app development" />
+                    </div><img src="assets/services/app-development.svg" width="48" height="48" alt="app development" />
                   </div>
                 </div>
                 <div class="card-body px-3 py-2">
@@ -357,7 +357,7 @@
           <div class="row">
             <div class="col-md-6" data-aos="zoom-in" data-aos-delay="100">
               <div class="bg-light my-2 p-3 pt-2">
-                <form action="https://formspree.io/your@email.com" method="POST">
+                <form action="https://formspree.io/agkush2001@email.com" method="POST">
                   <div class="form-group my-2">
                     <label for="name" class="form-label fw-bolder">Name</label>
                     <input class="form-control" type="text" id="name" name="name" required>
