updates in index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="row">
             <div class="col-md-6">
               <br><br>
-              <h2 class="h4 my-2">Hello! I’m Kushagra Agarwal.</h2>
+              <h2 class="h4 my-2">Hello! I'm Kushagra Agarwal.</h2>
               <p>I am a detail-oriented and ambitious engineering student with a passion for obtaining accurate results and working on a team. I am a passionate Programmer and a Web Designer. I am a quick learner and a team worker that gets the job done. I can easily capitalize on low hanging fruits and quickly maximize timely deliverables for real-time schemas.</p>
               <div class="row mt-3">
                 <div class="col-sm-2">
